# demo_android_ncnn

app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/rangi/nanodet/: MainActivity.java  Utils.java  WelcomeActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
